A series of small fixes that Improve Documentation and Code Quality (SonarQube recommendations) (#424)
* Fixing Javadoc Errors
* SonarQube Fix: Performance - Method invokes inefficient Number constructor; use static valueOf instead
* SonarQube: Security - Array is stored directly
* Fixing null pointer issues with new clone method

Signed-off-by: James Sutton <james.sutton@uk.ibm.com>