@@ -203,12 +203,11 @@ public class ClientComms {
 
 	/**
 	 * Removes the message corresponding to the token from the outbound queue and persistence.
-	 * @param token The {@link IMqttDeliveryMqttToken} to remove
+	 * @param token The {@link IMqttDeliveryToken} to remove
 	 * @return if the message is removed, then true, otherwise false
 	 * @throws MqttException if an error occurs sending the message
 	 */
 	public boolean removeMessage(IMqttDeliveryToken token) throws MqttException {
-		final String methodName = "removeMessage";
 		return this.clientState.removeMessage(token);
 	}
 
@@ -217,6 +216,7 @@ public class ClientComms {
 	 *
 	 * Call each main class and let it tidy up e.g. releasing the token
 	 * store which normally survives a disconnect.
+	 * @param force - whether to force the connection to close.
 	 * @throws MqttException  if not disconnected
 	 */
 	public void close(boolean force) throws MqttException {
@@ -293,7 +293,7 @@ public class ClientComms {
 			}
 			else {
 				// @TRACE 207=connect failed: not disconnected {0}
-				log.fine(CLASS_NAME,methodName,"207", new Object[] {new Byte(conState)});
+				log.fine(CLASS_NAME,methodName,"207", new Object[] {Byte.valueOf(conState)});
 				if (isClosed() || closePending) {
 					throw new MqttException(MqttException.REASON_CODE_CLIENT_CLOSED);
 				} else if (isConnecting()) {
@@ -322,7 +322,7 @@ public class ClientComms {
 		}
 
 		// @TRACE 204=connect failed: rc={0}
-		log.fine(CLASS_NAME,methodName,"204", new Object[]{new Integer(rc)});
+		log.fine(CLASS_NAME,methodName,"204", new Object[]{Integer.valueOf(rc)});
 		throw mex;
 	}
 
@@ -426,7 +426,7 @@ public class ClientComms {
 		// it now. This is done at the end to allow a new connect
 		// to be processed and now throw a currently disconnecting error.
 		// any outstanding tokens and unblock any waiters
-		if (endToken != null & callback != null) {
+		if (endToken != null && callback != null) {
 			callback.asyncOperationComplete(endToken);
 		}
 
@@ -627,7 +627,7 @@ public class ClientComms {
 		return networkModules;
 	}
 	public void setNetworkModules(NetworkModule[] networkModules) {
-		this.networkModules = networkModules;
+		this.networkModules = networkModules.clone();
 	}
 	public MqttDeliveryToken[] getPendingDeliveryTokens() {
 		return tokenStore.getOutstandingDelTokens();
@@ -659,7 +659,7 @@ public class ClientComms {
 
 	public Properties getDebug() {
 		Properties props = new Properties();
-		props.put("conState", new Integer(conState));
+		props.put("conState", Integer.valueOf(conState));
 		props.put("serverURI", getClient().getServerURI());
 		props.put("callback", callback);
 		props.put("stoppingComms", new Boolean(stoppingComms));
